--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ fonttools>=4.56.0
 fsspec>=2023.9.0
 gitdb>=4.0.12
 GitPython>=3.1.44
-pytorch-grad-cam>=1.4.0
+pytorch-grad-cam
 idna>=3.10
 imageio>=2.37.0
 Jinja2>=3.1.6
