--- a/requirements.txt
+++ b/requirements.txt
@@ -1,70 +1,70 @@
-altair>=5.5.0
-attrs>=25.1.0
-blinker>=1.9.0
-cachetools>=5.5.2
-certifi>=2023.7.22
-charset-normalizer>=3.4.1
-click>=8.1.8
-cloudpickle>=3.1.1
-colorama>=0.4.6
-contourpy>=1.3.1
-cycler>=0.12.1
-filelock>=3.17.0
-fonttools>=4.56.0
-fsspec>=2023.9.0
-gitdb>=4.0.12
-GitPython>=3.1.44
-grad-cam>=1.4.0
-idna>=3.10
-imageio>=2.37.0
-Jinja2>=3.1.6
-joblib>=1.4.2
-jsonschema>=4.23.0
-jsonschema-specifications>=2023.11.0
-kiwisolver>=1.4.8
-lazy_loader>=0.4.0
-lime>=0.2.0.1
-llvmlite>=0.44.0
-MarkupSafe>=2.1.2
-matplotlib>=3.10.1
-mpmath>=1.3.0
-narwhals>=1.30.0
-networkx>=3.4.2
-numba>=0.61.0
-numpy>=1.24.0
-opencv-python>=4.11.0.86
-packaging>=24.2
-pandas>=2.2.3
-Pillow>=11.1.0
-protobuf>=5.26.1
-pyarrow>=12.0.0
-pydeck>=0.9.1
-pyparsing>=3.2.1
-python-dateutil>=2.9.0
-pytz>=2022.7
-referencing>=0.36.2
-requests>=2.31.0
-rpds-py>=0.23.1
-scikit-image>=0.25.2
-scikit-learn>=1.6.1
-scipy>=1.10.0
-shap>=0.47.0
-six>=1.17.0
-slicer>=0.0.8
-smmap>=5.0.2
-streamlit>=1.25.0
-sympy>=1.13.1
-tenacity>=9.0.0
-threadpoolctl>=3.5.0
-tifffile>=2023.4.0
-toml>=0.10.2
-torch>=2.0.0
-torchvision>=0.15.2
-torchxrayvision>=1.3.2
-tornado>=6.4.2
-tqdm>=4.67.1
-ttach>=0.0.7
-typing_extensions>=4.0.0
-tzdata>=2022.7
-urllib3>=2.3.0
-watchdog>=2.1.9
+altair
+attrs
+blinker
+cachetools
+certifi
+charset-normalizer
+click
+cloudpickle
+colorama
+contourpy
+cycler
+filelock
+fonttools
+fsspec
+gitdb
+GitPython
+grad-cam
+idna
+imageio
+Jinja2
+joblib
+jsonschema
+jsonschema-specifications
+kiwisolver
+lazy_loader
+lime
+llvmlite
+MarkupSafe
+matplotlib
+mpmath
+narwhals
+networkx
+numba
+numpy
+opencv-python
+packaging
+pandas
+Pillow
+protobuf
+pyarrow
+pydeck
+pyparsing
+python-dateutil
+pytz
+referencing
+requests
+rpds-py
+scikit-image
+scikit-learn
+scipy
+shap
+six
+slicer
+smmap
+streamlit
+sympy
+tenacity
+threadpoolctl
+tifffile
+toml
+torch
+torchvision
+torchxrayvision
+tornado
+tqdm
+ttach
+typing_extensions
+tzdata
+urllib3
+watchdog
