--- a/requirements.txt
+++ b/requirements.txt
@@ -75,10 +75,10 @@ streamlit==1.43.2
 sympy==1.13.1
 tenacity==9.0.0
 tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
+tensorboard-data-server
+tensorflow
+tensorflow-io-gcs-filesystem
+termcolor
 threadpoolctl==3.6.0
 tifffile==2025.3.13
 toml==0.10.2
